<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mahjongnote.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:columnCount="3"
        android:rowCount="6">
    <!-- line 1 -->
        <TextView
            android:layout_gravity="fill"
            android:gravity="left"
            android:id="@+id/lizhiStickNum"/>
        <TextView
            android:text="@string/east"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_gravity="fill"
            android:gravity="right"
            android:id="@+id/changFullName"/>
    <!-- line 2 -->
        <Space
            android:layout_gravity="fill"
            android:layout_columnWeight="1" />
        <EditText
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:gravity="center_horizontal"
            android:id="@+id/editText1"
            android:hint="username"/>
        <Space
            android:layout_gravity="fill"
            android:layout_columnWeight="1" />
    <!-- line 3 -->
        <TextView
            android:text="@string/south"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:id="@+id/eastScore"/>
        <TextView
            android:text="@string/north"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1" />
    <!-- line 4 -->
        <EditText
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:id="@+id/editText2"
            android:hint="username"/>
        <TextView
            android:layout_gravity="fill"
            android:gravity="center_horizontal|bottom"
            android:id="@+id/westScore"/>
        <EditText
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:id="@+id/editText4"
            android:hint="username"/>
    <!-- line 5 -->
        <TextView
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:id="@+id/southScore"/>
        <TextView
            android:text="@string/west"
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1" />
        <TextView
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:id="@+id/northScore"/>
    <!-- line 6 -->
        <Space
            android:layout_gravity="fill"
            android:layout_columnWeight="1" />
        <EditText
            android:layout_gravity="fill"
            android:gravity="center_horizontal"
            android:layout_columnWeight="1"
            android:layout_height="40dp"
            android:paddingBottom="10dp"
            android:id="@+id/editText3"
            android:hint="username"/>
        <Space
            android:layout_gravity="fill"
            android:layout_columnWeight="1" />
    </GridLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="right">
        <Button
            android:id="@+id/buttonLizhi"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/lizhi"
            android:onClick="changeMahjongEventMode"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonLiuju"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/liuju"
            android:onClick="changeMahjongEventMode"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonZimo"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/zimo"
            android:onClick="changeMahjongEventMode"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonDian"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/dian"
            android:onClick="changeMahjongEventModeDian"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:textColor="#0000ff"
            android:onClick="confirm"
            android:visibility="gone"/>
        <Button
            android:id="@+id/buttonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:onClick="startGame"/>
    </LinearLayout>
</LinearLayout>